# school-work-archive

./: .gitignore
fa_2016/geol-1010_physical-geology/: Dylan Mumm GEOL1030 Section 12.xlsx  DylanMumm_GEOL1030_12_Fracking_Draft.pptx
fa_2017/comm-2500_public-speaking/: Chap2Qs.txt  Chap4Qs.txt  Chap5Qs.txt  Chap7Qs.txt  Persuasive Planning Activity.doc  Pre-K Planning.docx  Root beer.docx  Speech Anxiety.docx  keyword heckman.doc
fa_2017/cpsc-2910_professional-issues-i/: fos.pptx
fa_2017/phys-2450_climate-change/: Chapter 6 Book Notes.docx  Chapter 6.docx  review.docx
fa_2017/stat-3090_business-statistics/: Assignment 1_ Medal Bar Graph.xlsx  Assignment 2 _ Minitab Steam and Leaf and Dotplot.docx  project 2.docx  project 2.xlsx
fa_2018/cpsc-2310_computer-organization/: Quiz 2 Summary.docx  Quiz 3 Summary.docx  Test 1 Study Guide.docx  Test 1 Summary.docx  Test 2 Study Guide.docx  Test 2 Summary.docx
fa_2018/geol-1120_earth-resources/: Pros and cons.pptx
fa_2019/: Analysis Ideas.docx  Narrative IDeas.docx
fa_2019/cpsc-4910_professional-issues-ii/: Skill Assessment.docx
fa_2019/ece-3520_programming-systems/: Chapter 1 - Introduction.docx  Chapter 2 - Formal Grammars.docx  readme.txt
fa_2019/engl-3750_film/: 9.09.19 Lecture.docx  All About Eve.docx  Bling Ring Inkshed.docx  Citizen Kane.docx  Do the Right Thing.docx  Essay 1.docx  Ideas_DylanMumm.docx  Lecture 08.26.19.docx  Lecture 09.02.19.docx  Lecture 09.04.19.docx  (+6 more)
sp_2019/: grades.xlsx  grades2.xlsx
sp_2020/: Registration.txt
sp_2023/cpsc-3120_design-and-analysis-of-algorithms/lecture-program-examples/: CMakeLists.txt
sp_2023/cpsc-3120_design-and-analysis-of-algorithms/lecture-program-examples/lecture01/: CMakeLists.txt  Factorial.cpp  Fibonacci.cpp
sp_2023/cpsc-3120_design-and-analysis-of-algorithms/lecture-program-examples/lecture03/: CMakeLists.txt  Stack.cpp
sp_2023/cpsc-3120_design-and-analysis-of-algorithms/lecture-program-examples/lecture04/: CMakeLists.txt  ClearableTable.cpp  QueueWithStacks.cpp  QueueWithStacksAlt.cpp
sp_2023/cpsc-3120_design-and-analysis-of-algorithms/lecture-program-examples/lecture05/: CMakeLists.txt  UnionFind.cpp
(+1202 files in other folders)
